Changes since version 3.0.1
---------------------------

- Added ability to configure Ice thread start/stop hooks through
  InitializationData.

- Added identityToString and stringToIdentity to the Communicator
  interface.

- It is now permissible to recreate a new object adapter with the same 
  name as an old adapter once waitForDeactivate() has returned on the
  old adapter.

- Added new method Ice::Communicator::createObjectAdapterWithRouter()
  which creates a routed object adapter. A object adapter can now only
  have one router associated with it, which is set with using this 
  method or by setting the <AdapterName>.Router property.  Also 
  as a result of this the Ice::ObjectAdapter::addRouter() and
  Ice::ObjectAdapter::removeRouter() methods have been removed.

- Added a new method addProxies() to Ice::Router, which can return
  evicted proxies. The old method addProxy() is now deprecated. Note
  that this is an internal interface for communications between
  clients and routers (such as Glacier2).

- Added communicator initialize method which takes a InitializationData
  structure containing communicator members which are only allowed
  to be set during communicator creation. Currently included are
  Properties, Logger, Stats and default context. The initializeWith 
  communicator initialization functions have been deprecated and the 
  setLogger(), setStats() and setDefaultContext() methods have been 
  removed.

- Fixed a bug where the ice_locator proxy method wouldn't change the
  proxy locator.

- Added requestId to Current.

- Performance improvements if an AMI callback object is reused with 
  the same proxy.

- If several proxies share the same connection, and an operation call
  on one of the proxies causes a failure and the shared connection to
  be closed, then subsequent calls on the other proxies will try to
  establish a new connection instead of throwing an exception, even if
  retries are disabled.
